workspace = { members = [
    "derive",
    "common",
    "rust-tun",
    "netlink-ops",
    "netlink-packet-audit",
    "netlink-proto",
    "netlink-sys",
    "rtnetlink",
    "rustables",
    "id_alloc",
    "tun2socks5",
    "ipstack",
] }

[package]
name = "nsproxy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = false
opt-level = 1
lto = true
# Just strip manually

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.7"
daggy = { version = "0.8.0", features = ["serde", "serde-1", "stable_dag"] }
derivative = "2.2.0"
fully_pub = "0.1.4"
libc = "0.2.149"
log = "0.4.20"
nix = { version = "0.27.1", features = [
    "sched",
    "net",
    "mount",
    "env",
    "hostname",
    "user",
    "ioctl",
] }
rust-ini = "0.20.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
xdg = "2.5.2"
nsproxy-derive = { path = "./derive" }
nsproxy-common = { path = "./common" }
zbus = { version = "3.14.1", features = ["tokio"] }
systemd-zbus = "0.1.1"
libsystemd = "0.7.0"
pidfd = { path = "./pidfd" }
tun = { path = "./rust-tun" }
netlink-ops = { path = "./netlink-ops" }
capctl = "0.2.3"
tokio = { version = "1.34.0", features = ["net"] }
petgraph = { version = "0.6.4" }
env_logger = "0.10.1"
directories = "5.0.1"
ipnetwork = "0.20.0"
uzers = "0.11.3"
proc-mounts = "0.3.0"
id_alloc = { path = "./id_alloc" }
tun2socks5 = { path = "./tun2socks5" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
bimap = { version = "0.6.3", features = ["serde"] }
owo-colors = "3.5.0"
inotify = "0.10.2"
futures = "0.3.29"
procfs = "0.16.0"
fs4 = "0.7.0"
linux-raw-sys = { version = "0.6.3", features = ["ioctl"] }
passfd = { version = "*" }
derive-new = "0.6.0"
# daemonize-me = "2.0.1"

[build-dependencies]
# All features enabled
vergen = { version = "8.0.0", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }

[dev-dependencies]
passfd = "0.1.6"
