[package]
name = "nsproxy-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derivative = "2.2.0"
fully_pub = "0.1.4"
indexmap = "2.1.0"
libc = "0.2.150"
nix = { version = "0.27.1", features = ["sched", "net", "mount", "env", "hostname", "fs"] }
owo-colors = "3.5.0"
pidfd = "0.2.4"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
